[package]
name = "zstd_writer"
version = "0.1.0"
authors = ["Vee Satayamas <5ssgdxltv@relay.firefox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.6.0+zstd.1.4.8"
memchr = "2"

[lib]
crate-type = ["cdylib"]
